2021-09-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that caused crashes when importing PDF files.
	* Added command-line option to import PDF file.

2021-08-22  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS command to import PDF files.

2021-08-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with being able to undo appending a collection.

2021-08-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that failed to add string macros for importing bibtex (Bug 440652).

2021-06-17  Robby Stephenson  <robby@periapsis.org>

	* Added RPGGeek.com data source.

2021-06-13  Robby Stephenson  <robby@periapsis.org>

	* Updated audio file metadata import for a few more fields.

2021-06-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that made audio file importing always be recursive.

2021-05-27  Robby Stephenson  <robby@periapsis.org>

	* Updated all templates to HTML5.

2021-05-23  Robby Stephenson  <robby@periapsis.org>

	* Improved some entry templates for table layout.

2021-05-16  Robby Stephenson  <robby@periapsis.org>

	* Allowed user-entered language selection for TheMovieDB.

2021-05-09  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.1.

2021-05-08  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source.
	* Updated Filmaster data source.

2021-05-06  Robby Stephenson  <robby@periapsis.org>

	* Improved image loading to account for orientation (Bug 436683).

2021-05-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed allowing empty beginning rows in table fields.

2021-04-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed relative links in the Entry View (Bug 436071).

2021-04-14  Robby Stephenson  <robby@periapsis.org>

	* Updated DBC data source.

2021-04-11  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS reply for install templates and scripts.

2021-04-04  Robby Stephenson  <robby@periapsis.org>

	* Added capability to save charts as PNG files.